2015-03-17  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Update Taufinder to use decaytyoe (can be HADRONIC, LEPTONIC or
	ANY), in FastJet.cc --- set TauFinder mode to hadronic for tau-tagging

2015-03-16  Andy Buckley  <andy.buckley@cern.ch>

	* Adding Cuts-based constructor to PrimaryHadrons.

	* Adding missing compare() method to HeavyHadrons projection.

2015-03-05  Andy Buckley  <andy.buckley@cern.ch>

	* Adding Cuts-based constructors and other tidying in UnstableFinalState and HeavyHadrons

2015-03-03  Andy Buckley  <andy.buckley@cern.ch>

	* Add support for a PLOT meta-file argument to rivet-cmphistos.

2015-02-27  Andy Buckley  <andy.buckley@cern.ch>

	* Improved time reporting.

2015-02-24  Andy Buckley  <andy.buckley@cern.ch>

	* Add Particle::fromHadron and Particle::fromPromptTau, and add a
	boolean 'prompt' argument to Particle::fromTau.

	* Fix WFinder use-transverse-mass property setting. Thanks to Christian Gutschow.

2015-02-04  Andy Buckley  <andy.buckley@cern.ch>

	* Add more protection against math domain errors with log axes.

	* Add some protection against nan-valued points and error bars in make-plots.

2015-02-03  Andy Buckley  <andy.buckley@cern.ch>

	* Converting 'bitwise' to 'logical' Cuts combinations in all analyses.

2015-02-02  Andy Buckley  <andy.buckley@cern.ch>

	* Use vector MET rather than scalar VET (doh...) in WFinder
	cut. Thanks to Ines Ochoa for the bug report.

	* Updating and tidying analyses with deprecation warnings.

	* Adding more Cuts/FS constructors for Charged,Neutral,UnstableFinalState.

	* Add &&, || and ! operators for without-parens-warnings Cut
	combining. Note these don't short-circuit, but this is ok since
	Cut comparisons don't have side-effects.

	* Add absetaIn, absrapIn Cut range definitions.

	* Updating use of sorted particle/jet access methods and cmp
	functors in projections and analyses.

2014-12-09  Andy Buckley  <andy.buckley@cern.ch>
